# Finance

./: README.md
Trading/LLM_Stock_Price_Prediciton/: assets.py  assets_stages.ipynb
Trading/Ollama_Stock_Price_Prediciton/: Whats_left.txt  assets.py  assets_experiments.ipynb  pyproject.toml  requirements.txt
