[tool.poetry]
name = "llm-stock-price-prediciton"
version = "0.1.0"
description = ""
authors = ["jamesrubio23 <jamesrubiojames@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yfinance = "^0.2.54"
streamlit = "^1.42.1"
pandas = "^2.2.3"
numpy = "^2.2.3"
plotly = "^6.0.0"
statsmodels = "^0.14.4"
finvizfinance = "^1.1.0"
holidays = "^0.67"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
